revised index.html

--- a/index.html
+++ b/index.html
@@ -12,30 +12,30 @@
     <article class="container">
         <nav>
           <figure class="topbar">
-            <img src=images/top_bar.png>
+            <img src="images/top_bar.png" alt="status bar">
           </figure>
           <figure class="statusbar">
-            <img src=images/left_right.png>
+            <img src="images/left_right.png" alt="arrow and location">
           </figure>
         </nav>
 
         <header>
           <ul class="title">
             <h1 style="color:#4E413B;">Washington & State
-              <img src=images/heart.png class="heart">
+              <img src="images/heart.png" alt="bookmark icon" class="heart">
             </h>
           </ul>
           <ul class="searchbar">
-            <img src=images/Search.png class="search">
+            <img src="images/Search.png" alt="search bar" class="search">
           </ul>
           <ul class="map">
-            <img src=images/map.png>
+            <img src="images/map.png" alt="map">
           </ul>
         </header>
 
         <section class="list">
           <ul class="buscoming">
-              <img src=images/busBackground.png class="bus-image">
+              <img src="images/busBackground.png" alt="upcoming bus" class="bus-image">
               <h2>Eastbound</h2>
               <li class="column-left">
                 <h3>60</h3>
@@ -46,11 +46,11 @@
               <li class="column-right">
                 <p>Randolph/Harbor Dr.</p>
               </li>
-              <img src=images/right.png class="right-arrow">
+              <img src="images/right.png" alt="right arrow" class="right-arrow">
           </ul>
 
           <ul class="buswaiting">
-              <img src=images/busWaiting.png class="bus-image-two">
+              <img src="images/busWaiting.png" alt="bus alt color" class="bus-image-two">
                 <li class="column-left">
                   <h3>124</h3>
                 </li>
@@ -60,12 +60,12 @@
                 <li class="column-right">
                   <p>Navy Pier</p>
                 </li>
-                <img src=images/r_pink.png class="right-arrow">
+                <img src="images/r_pink.png" alt="right arrow pink" class="right-arrow">
           </ul>
 
           <ul class="buswaiting">
             <h2>Northbound</h2>
-              <img src=images/busWaiting.png class="bus-image-two">
+            <img src="images/busWaiting.png" alt="bus alt color" class="bus-image-two">
                 <li class="column-left">
                   <h3>151</h3>
                 </li>
@@ -75,12 +75,12 @@
                 <li class="column-right">
                   <p>Devon/Clark</p>
                 </li>
-                <img src=images/r_pink.png class="right-arrow">
+                <img src="images/r_pink.png" alt="right arrow pink" class="right-arrow">
           </ul>
 
           <ul class="buswaiting">
             <h2>Southbound</h2>
-              <img src=images/busWaiting.png class="bus-image-two">
+            <img src="images/busWaiting.png" alt="bus alt color" class="bus-image-two">
                 <li class="column-left">
                   <h3>J14</h3>
                 </li>
@@ -90,11 +90,11 @@
                 <li class="column-right">
                   <p>103rd/Stony Island</p>
                 </li>
-                <img src=images/r_pink.png class="right-arrow">
+                <img src="images/r_pink.png" alt="right arrow pink" class="right-arrow">
           </ul>
 
           <ul class="buswaiting">
-              <img src=images/busWaiting.png class="bus-image-two">
+            <img src="images/busWaiting.png" alt="bus alt color" class="bus-image-two">
                 <li class="column-left">
                   <h3>124</h3>
                 </li>
@@ -104,12 +104,12 @@
                 <li class="column-right">
                   <p>Navy Pier</p>
                 </li>
-                  <img src=images/r_pink.png class="right-arrow">
+                <img src="images/r_pink.png" alt="right arrow pink" class="right-arrow">
           </ul>
 
           <ul class="buswaiting">
             <h2>Reroute</h2>
-              <img src=images/busWaiting.png class="bus-image-two">
+            <img src="images/busWaiting.png" alt="bus alt color" class="bus-image-two">
                 <li class="column-left">
                   <h3>6x</h3>
                 </li>
@@ -119,12 +119,12 @@
                 <li class="column-right">
                   <p>Jackson Park Express</p>
                 </li>
-                  <img src=images/r_pink.png class="right-arrow">
+                <img src="images/r_pink.png" alt="right arrow pink" class="right-arrow">
           </ul>
 
           <ul class="buswaiting">
             <h2>Out of Service</h2>
-              <img src=images/busWaiting.png class="bus-image-two">
+            <img src="images/busWaiting.png" alt="bus alt color" class="bus-image-two">
                 <li class="column-left">
                   <h3>4</h3>
                 </li>
@@ -134,11 +134,11 @@
                 <li class="column-right">
                   <p>Cottage Grove</p>
                 </li>
-                  <img src=images/r_pink.png class="right-arrow">
+                <img src="images/r_pink.png" alt="right arrow pink" class="right-arrow">
           </ul>
 
           <ul class="buswaiting">
-              <img src=images/busWaiting.png class="bus-image-two">
+            <img src="images/busWaiting.png" alt="bus alt color" class="bus-image-two">
               <li class="column-left">
                 <h3>20</h3>
               </li>
@@ -148,11 +148,11 @@
               <li class="column-right">
                 <p>Madison</p>
               </li>
-                <img src=images/r_pink.png class="right-arrow">
+              <img src="images/r_pink.png" alt="right arrow pink" class="right-arrow">
           </ul>
 
           <ul class="buswaiting">
-              <img src=images/busWaiting.png class="bus-image-two">
+            <img src="images/busWaiting.png" alt="bus alt color" class="bus-image-two">
               <li class="column-left">
                 <h3>157</h3>
               </li>
@@ -162,7 +162,7 @@
               <li class="column-right">
                 <p>Streeterville/Taylor</p>
               </li>
-                <img src=images/r_pink.png class="right-arrow">
+              <img src="images/r_pink.png" alt="right arrow pink" class="right-arrow">
           </ul>
           </section>
         </article>
