--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <li class="column-right">
                   <p>Navy Pier</p>
                 </li>
-                <img src="images/R_pink.png" alt="right arrow pink" class="right-arrow">
+                <img src="images/right-pink.png" alt="right arrow pink" class="right-arrow">
           </ul>
 
           <ul class="buswaiting">
@@ -75,7 +75,7 @@
                 <li class="column-right">
                   <p>Devon/Clark</p>
                 </li>
-                <img src="images/R_pink.png" alt="right arrow pink" class="right-arrow">
+                <img src="images/right-pink.png" alt="right arrow pink" class="right-arrow">
           </ul>
 
           <ul class="buswaiting">
@@ -90,7 +90,7 @@
                 <li class="column-right">
                   <p>103rd/Stony Island</p>
                 </li>
-                <img src="images/R_pink.png" alt="right arrow pink" class="right-arrow">
+                <img src="images/right-pink.png" alt="right arrow pink" class="right-arrow">
           </ul>
 
           <ul class="buswaiting">
@@ -104,7 +104,7 @@
                 <li class="column-right">
                   <p>Navy Pier</p>
                 </li>
-                <img src="images/R_pink.png" alt="right arrow pink" class="right-arrow">
+                <img src="images/right-pink.png" alt="right arrow pink" class="right-arrow">
           </ul>
 
           <ul class="buswaiting">
@@ -119,7 +119,7 @@
                 <li class="column-right">
                   <p>Jackson Park Express</p>
                 </li>
-                <img src="images/R_pink.png" alt="right arrow pink" class="right-arrow">
+                <img src="images/right-pink.png" alt="right arrow pink" class="right-arrow">
           </ul>
 
           <ul class="buswaiting">
@@ -134,7 +134,7 @@
                 <li class="column-right">
                   <p>Cottage Grove</p>
                 </li>
-                <img src="images/R_pink.png" alt="right arrow pink" class="right-arrow">
+                <img src="images/right-pink.png" alt="right arrow pink" class="right-arrow">
           </ul>
 
           <ul class="buswaiting">
@@ -148,7 +148,7 @@
               <li class="column-right">
                 <p>Madison</p>
               </li>
-              <img src="images/R_pink.png" alt="right arrow pink" class="right-arrow">
+              <img src="images/right-pink.png" alt="right arrow pink" class="right-arrow">
           </ul>
 
           <ul class="buswaiting">
@@ -162,7 +162,7 @@
               <li class="column-right">
                 <p>Streeterville/Taylor</p>
               </li>
-              <img src="images/R_pink.png" alt="right arrow pink" class="right-arrow">
+              <img src="images/right-pink.png" alt="right arrow pink" class="right-arrow">
           </ul>
           </section>
         </article>
